# n-body

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  format.sh  make.sh  optim_notes.txt
qml/: main.qml
src/: Body.cpp  Body.h  ControlPanelWidget.cpp  ControlPanelWidget.h  Engine.cpp  Engine.h  MainWindow.cpp  MainWindow.h  NBodyError.h  SimView.cpp  SimView.h  control_panel_widget.cpp  engine.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sim_view.cpp  sim_view.h  simulation_view.cpp  simulation_view.h  simview.cpp  simview.h
src/engine/: Body.cpp  Body.h  Config.h  Engine.cpp  Engine.h  EngineThread.cpp  EngineThread.h  RendererInterface.h
src/rendering/: Error.cpp  Error.h  Renderer.cpp  Renderer.h  renderer.cpp  renderer.h  shaders.h
src/rendering/shaders/: fragment.glsl  vertex.glsl
src/widgets/: ControlPanelWidget.cpp  ControlPanelWidget.h  Section.cpp  Section.h  SimView.cpp  SimView.h
